--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@vercel/speed-insights": "^1.0.10",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "github-slugger": "^2.0.0",
     "lucide-react": "^0.370.0",
     "next": "14.2.2",
     "next-themes": "^0.3.0",
