--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
@@ -30,6 +31,7 @@
   "devDependencies": {
     "@mdx-js/react": "^3.0.1",
     "@tailwindcss/typography": "^0.5.12",
+    "@types/js-yaml": "^4.0.9",
     "@types/mdast": "^4.0.3",
     "@types/node": "^20",
     "@types/react": "^18",
