--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,6 +22,12 @@
       "#site/content": ["./.velite"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+  "include": [
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    ".next/types/**/*.ts",
+    "lib/gtag.js"
+, "components/GoogleAnalytics.jsx"  ],
   "exclude": ["node_modules"]
 }
