--- a/package.json
+++ b/package.json
@@ -49,5 +49,6 @@
     "tailwindcss": "^3.4.1",
     "typescript": "^5",
     "velite": "^0.1.0-beta.14"
-  }
+  },
+  "packageManager": "yarn@1.22.22+sha1.ac34549e6aa8e7ead463a7407e1c7390f61a6610"
 }
