--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-ga4": "^2.1.0",
     "tailwind-merge": "^2.2.2",
     "tailwindcss-animate": "^1.0.7",
+    "tailwindcss-animation-delay": "^2.0.2",
     "unist-util-visit": "^5.0.0",
     "uuid": "^9.0.1"
   },
