--- a/package.json
+++ b/package.json
@@ -15,20 +15,25 @@
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-slot": "^1.0.2",
+    "@react-three/drei": "^8.20.2",
+    "@react-three/fiber": "^8.18.0",
+    "@types/three": "^0.179.0",
     "@vercel/analytics": "^1.2.2",
     "@vercel/speed-insights": "^1.0.10",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "github-slugger": "^2.0.0",
     "lucide-react": "^0.370.0",
+    "matter-js": "^0.20.0",
     "next": "14.2.2",
     "next-themes": "^0.3.0",
-    "react": "^18",
-    "react-dom": "^18",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-ga4": "^2.1.0",
     "tailwind-merge": "^2.2.2",
     "tailwindcss-animate": "^1.0.7",
     "tailwindcss-animation-delay": "^2.0.2",
+    "three": "^0.179.1",
     "unist-util-visit": "^5.0.0",
     "uuid": "^9.0.1"
   },
@@ -36,10 +41,11 @@
     "@mdx-js/react": "^3.0.1",
     "@tailwindcss/typography": "^0.5.12",
     "@types/js-yaml": "^4.0.9",
+    "@types/matter-js": "^0.20.0",
     "@types/mdast": "^4.0.3",
     "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
+    "@types/react": "^18.3.24",
+    "@types/react-dom": "^18.3.7",
     "@types/uuid": "^9.0.8",
     "eslint": "^8",
     "eslint-config-next": "14.2.2",
