--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "github-slugger": "^2.0.0",
+    "gsap": "^3.13.0",
     "lucide-react": "^0.370.0",
     "matter-js": "^0.20.0",
     "next": "14.2.2",
